--- a/gatewayAPI/package.json
+++ b/gatewayAPI/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/clionaderoiste/ui.api#readme",
   "dependencies": {
-    "koa": "^2.2.0"
+    "koa": "^2.2.0",
+    "koa-route": "^3.2.0"
   }
 }
